Important (externally visible) changes since 2.0 release:
<<ARIZONA-ONLY>>

Since release of Version 2.1 (Sept 99):


From todd  Tue Jan 25 21:55:06 2000
Prevent the resumption of a returned closure, by adding a new Return method
to vDescriptor.  Originally discovered in ddfread() as called from dlgvu.

From gmt  Dec 15 1998
General cleanup of benchmark area motivated by problems running Linux
benchmarks to add to SP&E paper.

From gmt  Dec 10 1998
In translator, change confusing name ir_RunTimeError to ir_Unreachable
in response to referee comments on SP&E paper.

------------------------------------------------------------------------------

Earlier:

From todd Sat Aug 29 10:36:25 1998
seq() cannot have a zero increment value.

From gmt Wed Sep  2 17:09:04 1998
I've stumbled across a way to get the host name without spawning "uname".

From todd Fri Sep  4 22:22:29 1998
Subject: seq() and TobY
Both now work with BigInts.

From todd Fri Sep  4 23:14:38 1998
Limitation (a\b) now works if b is a big integer....

From gmt Wed Dec  9 09:48:20 1998
I've updated jcon to support writing JPEG images when run by a
sufficiently recent version of JDK (1.2beta4 or newer).

From gmt 1999/02/18 22:43:41
Fix defaulting of w & h when dx/dy are set.
Fix WriteImage to write valid images when w/h extend beyond window.

From gmt Tue Mar 23 15:44:22 1999
Changed package name "rts" to "jcon", necessitating
a corresponding change in subdirectory name (ugh).

From gmt 1999/05/06 18:25:43
"jcont -r" bundles the runtime system into the output file, making it
self-contained.

From gmt Mon May 17 10:55:33 1999
Icon v9.3.2 is adding the ability to read a directory by
opening it as a file.  I've added corresponding code to Jcon.

From gmt Thu May 27 17:10:15 1999
You can now say
    jcont ... file.class ...
to bundle a Java classfile with a program, and use
    p := loadfunc(,name)
to load it.

From gmt Wed Sep  1 17:58:21 MST 1999
Added code for exponentiation to a BigInt power.
